--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,10 @@
-
 src/pykato.egg-info/
-
-src/pykato/__pycache__/
-
-src/pykato/plotfunction/__pycache__/
-
-pykato.code-workspace
-
+**/__pycache__
+**/*.code-workspace
+**/.Trash*
+**/*.yml
+**/*.4D
+**/temp
 .vscode/settings.json
-
-tests/__pycache__/
-
 tests/output/
-
 src/pykato/py.typed
-pykato_github.code-workspace
